<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_16dp"
    app:cardBackgroundColor="@color/dark_grey"
    tools:context=".activities.LoginActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/LoginEmailtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:visibility="visible" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/LoginPasswordtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/LoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5dp"
        android:text="@string/login"
        android:visibility="visible" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/GoogleSignInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5dp"
        android:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SignUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5dp"
        android:text="@string/register"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</LinearLayout>
